2008-03-27  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/command/main.py:
	Print errors on stderr and return an error code when it fails.
	Fixes #908

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/soundcard/soundcard.py:
	  Handle BUSY and OPEN_READ/OPEN_WRITE better so we get a nicer
	  message.  Fixes #743.
	* po/nl.po:
	  Add translation.

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent010.py:
	  Wrap subclass method invoke into something that can catch
	  programming errors and shows them.

2008-03-26  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer-wizard.glade
	  Missing changes to fix #882.

2008-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/wizard/models.py:
	  Subclass from log.Loggable so we can debug.
	* flumotion/component/encoders/theora/theora_wizard.py:
	* flumotion/test/test_wizard_save.py:
	  Fix test by setting a default delta and checking for it.  Really
	  fixes #885

2008-03-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/configurationwizard.py
	(ConfigurationWizard._save): 
	Unbreak non-audio streams bug introduced in last commit.

2008-03-26  Johan Dahlin  <johan@gnome.org>

	reviewed by: Zaheer

	* flumotion/wizard/productionsteps.py:
	Add a public hasVideo() method

	* flumotion/wizard/configurationwizard.py:
	Use hasVideo() on the production step instead of 
	checking if the overlay step has been shown.

	Fixes #906

2008-03-26  Sebastien Merle  <sebastien@fluendo.com>

	reviewed by: Zaheer Abbas Merali
	
	* flumotion/component/bouncers/admin_gtk.py:
	Updated to let the base class BaseAdminGtkNode handle
	the listener registration and cleanup.
	Fixes #900.

2008-03-26  Michael Smith <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	  Pass the correct medium (the porter client medium) to